--- a/index.html
+++ b/index.html
@@ -9,14 +9,29 @@
          <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
          <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
         <!-- Title -->
-        <title>Love running</title>
+         <title>Love running</title>
         <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+         <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+         <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     </head>
 
     <body>
+        
+        <!-- header content -->
+        <header>
+            Header
+        </header>
+
+        <!-- main page content -->
+        <main>
+            Main Content
+        </main>
+
+        <!-- footer content -->
+        <footer>
+            Footer
+        </footer>
 
     </body>
 
