--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         
         <!-- header content -->
         <header>
-            Header
+            <a href="index.html">
+                <h1 id="logo">Love Running</h1>
+            </a>
         </header>
 
         <!-- main page content -->
