--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@
 
         <!-- footer content -->
         <footer>
-            Footer
+            <ul>
+                <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            </ul>
         </footer>
+
+        <!-- Font awesome kit -->
+        <script src="https://kit.fontawesome.com/2e01e9b8de.js" crossorigin="anonymous"></script>
 
     </body>
 
