--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <!-- footer content -->
         <footer>
-            <ul>
+            <ul id="social-networks">
                 <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
                 <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a></li>
                 <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></i></a></li>
