added and styled hero image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 
         <!-- main page content -->
         <main>
-            Main Content
+            <section id="hero">
+
+            </section>
         </main>
 
         <!-- footer content -->
