fixed radio buttons separated from their label on signup page

--- a/signup.html
+++ b/signup.html
@@ -64,15 +64,21 @@
                     <!-- RADIO GROUP -->
                     <div class="radio-buttons">
 
-                        <label for="road">Road</label>
-                        <input type="radio" id="road" name="running_preference" value="road">
+                        <div>
+                            <label for="road">Road</label>
+                            <input type="radio" id="road" name="running_preference" value="road">
+                        </div>
 
-                        <label for="trail">Trail</label>
-                        <input type="radio" id="trail" name="running_preference" value="trail">
-
-                        <label for="both">Both</label>
-                        <input type="radio" id="both" name="running_preference" value="both">
+                        <div>
+                            <label for="trail">Trail</label>
+                            <input type="radio" id="trail" name="running_preference" value="trail">
+                        </div> 
                         
+                        <div>
+                            <label for="both">Both</label>
+                            <input type="radio" id="both" name="running_preference" value="both">
+                        </div>
+
                     </div>
                     <!-- END RADIO GROUP -->
 
