--- a/signup.html
+++ b/signup.html
@@ -50,15 +50,15 @@
                     <h2><i class="fa-solid fa-heart-pulse"></i> LETS GET YOU SIGNED UP!</h2>
 
                     <label for="first-name">First Name</label>
-                    <input type="text" id="first-name" name="first-name" class="text-input">
+                    <input type="text" id="first-name" name="first-name" class="text-input" required>
                     <br>
 
                     <label for="last-name">Last Name</label>
-                    <input type="text" id="last-name" name="last-name" class="text-input">
+                    <input type="text" id="last-name" name="last-name" class="text-input" required>
                     <br>
 
                     <label for="email-address">Email Address</label>
-                    <input type="email" id="email-address" name="email-address" class="text-input">
+                    <input type="email" id="email-address" name="email-address" class="text-input" required>
                     <br>  
 
                     <!-- RADIO GROUP -->
@@ -66,7 +66,7 @@
 
                         <div>
                             <label for="road">Road</label>
-                            <input type="radio" id="road" name="running_preference" value="road">
+                            <input type="radio" id="road" name="running_preference" value="road" required>
                         </div>
 
                         <div>
