--- a/gallery.html
+++ b/gallery.html
@@ -73,10 +73,10 @@
             </li>
             <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Youtube page (opens in a new tab)"><i
-                        class="fa-brands fa-youtube"></i></i></a></li>
+                        class="fa-brands fa-youtube"></i></a></li>
             <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)"><i
-                        class="fa-brands fa-instagram"></i></i></a></li>
+                        class="fa-brands fa-instagram"></i></a></li>
         </ul>
     </footer>
 
